cdk.out/security-stack.template.json
{
 "Resources": {
  "lambdasg93781054": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for Lambda Functions",
    "GroupName": "tmp-lambda-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/lambda-sg/Resource"
   }
  },
  "bastionsg9F6FB053": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for Bastion Host",
    "GroupName": "tmp-bastion-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "SSH Access",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/bastion-sg/Resource"
   }
  },
  "ecssg0261AE9D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for ECS",
    "GroupName": "tmp-ecs-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/ecs-sg/Resource"
   }
  },
  "dbsgCE6973BD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for RDS",
    "GroupName": "tmp-db-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/db-sg/Resource"
   }
  },
  "dbsgfromsecuritystackecssgDE676D7C5432B8B5AC88": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "PostgreSQL from ECS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "dbsgCE6973BD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ecssg0261AE9D",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/db-sg/from securitystackecssgDE676D7C:5432"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/7WRQU/DMAyFf8tyRGnYultviAPqhU3dsZpQ5hgWljkliammqv8ddS2oiOs4WJaenz4927nKl7laLnQbMzCnzNmD6nZJw0lWGD0HwFrcCTmrvdRtfEHIVbdD4GDT5Sl4bupOfDYgiqtNO+fbB+c2nA6eyYgiBUYpDEYItknW0+SMc8azPuNV7+WtadqYkt4CxlixQ1HUnQBNJTlLOCojEzwRwoCME5PJfjCW5hvV/1zi9in/eefBP8+/l4+v9OuLf4QJ0A+DDaeGUy+3l3T0dL9Wq1ytF+/R2iwwJXtGVY39C86dY1ZYAgAA"
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "SecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "ecssg0261AE9D",
     "GroupId"
    ]
   }
  },
  "DBSecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "dbsgCE6973BD",
     "GroupId"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
